<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/action_android"
    android:enabled="true"
    android:icon="@drawable/map_nav"
    android:title="@string/bottom_navigation_menu_android"
    app:showAsAction="ifRoom" />
<item
    android:id="@+id/action_logo"
    android:enabled="true"
    android:icon="@drawable/list_rest"
    android:title="@string/bottom_navigation_menu_logos"
    app:showAsAction="ifRoom" />
<item
    android:id="@+id/coworkerList"
    android:enabled="true"
    android:icon="@drawable/coworker"
    android:title="@string/bottom_navigation_menu_landscape"
    app:showAsAction="ifRoom" />
</menu>

